--- a/src/HeaderBar.css
+++ b/src/HeaderBar.css
@@ -5,7 +5,7 @@
     background-color: black;
     padding: 0.5rem 2rem;
     color: white;
-    height: 5vh;
+    height: 50px;
   }
   
   .brand-name {
